--- a/MouseEnterLeave.html
+++ b/MouseEnterLeave.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="box">
+        <h3>Hii</h3>
+    </div>
+    <script>
+        const mEnter = document.getElementById("box");
+        mEnter.addEventListener("mouseenter", () => {
+            mEnter.style.backgroundColor = "cyan";
+            console.log("Mouse Enter");
+        });
+
+        mEnter.addEventListener("mouseleave", () => {
+            console.log("Mouse Leave");
+            mEnter.style.backgroundColor = "pink";
+        });
+    </script>
 </body>
 </html>
