--- a/CSS/index.html
+++ b/CSS/index.html
@@ -45,6 +45,10 @@
             <div>
                 <h2 id="myFirstId">Astrophile ~ A lover of the universe.</h2>
             </div>
+
+            <p class="textCSS">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita corrupti, explicabo accusantium veniam voluptatem consequatur ratione reprehenderit illum nisi quod repellendus, beatae saepe dolores at! Laudantium eaque aspernatur aut facere.
+            </p>
         
         </div>
 </body>
